typofix (baton -> batten)

--- a/_posts/2015-01-04-data.md
+++ b/_posts/2015-01-04-data.md
@@ -29,7 +29,7 @@ This is a very simplistic explanation, but all-in-all it’s what you need to kn
 <hr>
 <div id="computerencryption">
 <p>
-	<h3 class="text-white">Baton down the hatches: <strong>Encrypt your hard-drive!</strong></h3>
+	<h3 class="text-white">Batten down the hatches: <strong>Encrypt your hard-drive!</strong></h3>
 </p>
 </div>
 So, say your laptop gets stolen. Boo to that! Computers are expensive :(
