--- a/_posts/2015-01-04-data.md
+++ b/_posts/2015-01-04-data.md
@@ -29,7 +29,7 @@ This is a very simplistic explanation, but all-in-all it’s what you need to kn
 <hr>
 <div id="computerencryption">
 <p>
-	<h3 class="text-white">Baton down the hatches: <strong>Encrypt your hard-drive!</strong></h3>
+	<h3 class="text-white">Batten down the hatches: <strong>Encrypt your hard-drive!</strong></h3>
 </p>
 </div>
 So, say your laptop gets stolen. Boo to that! Computers are expensive :(
@@ -71,7 +71,7 @@ The Electronic Frontier Foundation offers in-depth guides for installing PGP on 
 <p>
 	<h3 class="text-white">Head in the clouds: <strong>Back-up your files in an encrypted cloud!</strong></h3>
 </p>
-Chances are you use a service like Dropbox or Google Drive to sync files to the cloud. While nifty, these services are liable to share your files with “interested parties” if compelled. And if they were ever hacked, all of your files would be open for the internet to see. Like most things in life, these services are much better when using encryption: if the files are encrypted in the cloud, and decrypted on your computer, you get the same functionality as Dropbox or Google Drive without nearly as much security risk! 
+Chances are you use a service like Dropbox or Google Drive to sync files to the cloud. While nifty, these services are liable to share your files with “interested parties” if compelled. And if they were ever hacked, all of your files would be open for the internet to see. Like most things in life, these services are much better when using encryption: if the files are encrypted in the cloud, and decrypted on your computer, you get the same functionality as Dropbox or Google Drive without nearly as much security risk!
 
 <code>There are numerous services out there that offer encrypted cloud storage, so check out <a href="http://lifehacker.com/the-best-cloud-storage-services-that-protect-your-priva-729639300">Lifehacker's guide to cloud storage services</a> to figure out what’s right for you.</code>
 
