--- a/_posts/2015-01-05-phones.md
+++ b/_posts/2015-01-05-phones.md
@@ -36,15 +36,13 @@ Just as you can encrypt your computer so no-one can dig around on your hard-driv
 Texts can be some of the most personal and private communications we have. They’re also especially vulnerable to being seen by others: your cell network can see them as they’re being sent (as can any government agency who’s chummy with that network). Anyone with access to your phone could read them too (hopefully you encrypted your phone to avoid this!). Lucky for you, there are some really awesome apps that will encrypt your texts across both iOS and Android to ensure truly private conversations.
 
 <div class="recommend">
-	<h5 class="text-white"><strong>Signal on iOS</strong></h5>
-<h5 class="text-white"><strong>TextSecure on Android</strong></h5>
+	<h5 class="text-white"><strong>Signal</strong></h5>
 <br>
-Signal and TextSecure are free, open-source apps for encrypted texting by the security gurus at <a href="https://en.wikipedia.org/wiki/Open_Whisper_Systems">Open Whisper Systems</a>. When you send a text to a friend that is also using TextSecure or Signal, the text will be encrypted so that only you and your friend can read the text on your phones. This happens automatically without any effort on your part! And the only information available to people monitoring the cell network is who sent the text, who recieved it, and when it was received: they cannot see the contents of the text.<br>
+Signal is free, open-source app for encrypted texting by the security gurus at <a href="https://en.wikipedia.org/wiki/Open_Whisper_Systems">Open Whisper Systems</a>. When you send a text to a friend that is also using Signal, the text will be encrypted so that only you and your friend can read the text on your phones. This happens automatically without any effort on your part! And the only information available to people monitoring the cell network is who sent the text, who received it, and when it was received: they cannot see the contents of the text.<br>
 <br>
-Texts sent to friends <em>not</em> using TextSecure or Signal will be unencrypted, but having the option makes these apps perfect as your general purpose texting app. Especially nifty is that regardless of whether your texts were encrypted for the recipient, they will be encrypted locally on your phone. So if someone ever got control of your phone, they would still need to decrypt your app (and your phone!) to see your stored messages (which the vast majority of thieves and hackers could not do).<br>
+Texts sent to friends <em>not</em>  Signal will be unencrypted, but having the option makes these apps perfect as your general purpose texting app. Especially nifty is that regardless of whether your texts were encrypted for the recipient, they will be encrypted locally on your phone. So if someone ever got control of your phone, they would still need to decrypt your app (and your phone!) to see your stored messages (which the vast majority of thieves and hackers could not do).<br>
 <br>
-<a href="https://whispersystems.org/blog/the-new-signal/">Signal</a> can be installed from the App Store.<br>
-<A href="https://whispersystems.org/">TextSecure</a> can be installed from the Play Store.
+The Electronic Frontier Foundation offers guides for using <a href="https://ssd.eff.org/en/module/how-use-signal-ios">Signal on iOS</a> and <a href="https://ssd.eff.org/en/node/93/">Signal on Android</a>.<br>
 </div>
 <hr>
 <div id="phonecalls">
@@ -57,9 +55,9 @@ Wiretapping is practically an American tradition. If there are ever times where 
 <div class="recommend">
 <h5 class="text-white"><strong>Encrypted Call Apps</strong></h5>
 <br>
-On iOS, we recommend using <strong>Signal</strong>, which is available in the iTunes app store. On Android, we recommend using <strong>Redphone</strong>, available in the Play store. Both are free, open-source encrypted call apps developed by the fantastic <a href="https://en.wikipedia.org/wiki/Open_Whisper_Systems">Open Whisper Systems</a>. Make sure to note that encrypted phone calls only work when the person you're calling also uses these apps. Luckily, Signal and Redphone users can easily communicate with each other as both apps are compatible with one another. Also, be aware that calls can be a bit harder to hear when they're encrypted.<br>
+We recommend using <strong>Signal</strong>, which is available for both iOS and Android. Both are free, open-source encrypted call apps developed by the fantastic <a href="https://en.wikipedia.org/wiki/Open_Whisper_Systems">Open Whisper Systems</a>. Make sure to note that encrypted phone calls only work when the person you're calling also uses these apps. Also, be aware that calls can be a bit harder to hear when they're encrypted.<br>
 <br>
-The Electronic Frontier Foundation offers guides for using <a href="https://ssd.eff.org/en/module/how-use-signal-%E2%80%93-private-messenger">Signal on iOS</a> and <a href="https://ssd.eff.org/en/module/how-use-redphone-android">Redphone on Android</a>.<br>
+The Electronic Frontier Foundation offers guides for using <a href="https://ssd.eff.org/en/module/how-use-signal-ios">Signal on iOS</a> and <a href="https://ssd.eff.org/en/node/93/">Signal on Android</a>.<br>
 </div>
 
 <hr>
