--- a/_posts/2015-01-09-about.md
+++ b/_posts/2015-01-09-about.md
@@ -7,21 +7,11 @@ fa-icon: heart
 ---
 
 <h2 class="text-blue">Who we are</h2>
-<strong>Safe Hub Collective</strong> is a Boston based group of activists working to make public spaces, physical or digital, safer and more accessible for everyone. You can follow us on Twitter at <a href="https://twitter.com/SafeHubCollect">@SafeHubCollect</a>, on Facebook at <a href="https://www.facebook.com/safehubcollective">Safe Hub Collective</a>, and on Tumblr at <a href="http://safehubcollective.org/">safehubcollective.org</a>.
+
+<strong>Noah Kelley</strong> is the writer and developer of this guide! Fiercely dedicated to establishing a culture of safe, accessible, and enriching technology free from exploitation, Noah explores cyberfeminism through the activist organization <a href="http:http://hackblossom.org/">HACK*BLOSSOM</a>. You can follow him/bug him with cybersecurity questions at <a href="https://twitter.com/ciakraa">@ciakraa</a> on Twitter (if it's active?!) or through email at <a href="mailto:noah@hackblossom.org">noah@hackblossom.org</a>. Bonus points if you email with <a href="#pgp">PGP</a> ;)
+
 <br>
-<br>
-This guide was written in our spare time as a labor of love. If you found it helpful, consider making a donation so we can continue to offer safer spaces and resources for our community.
-<p>
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="container center">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="V64VACT32PPQS">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
-</p>
-<br>
-<br>
-If you have cybersecurity questions, feel free to tweet the nerds hanging out in the <a href="https://twitter.com/hashtag/SafeHubTech?f=realtime">#SafeHubTech</a> hashtag on Twitter.
+This guide was written in our spare time as a labor of love! We hope you enjoyed it :D
 <br>
 <br>
 
@@ -34,4 +24,3 @@ We would like to extend special thanks to the following organizations that helpe
 	<li><a href="https://www.mozilla.org/en-US/">Mozilla Foundation</a> - Mozilla's continued dedication to open-source technology and user security makes our cybersecurity possible.</li>
 	<li><a href="https://libraryfreedomproject.org/">Library Freedom Project</a> - Much thanks for great technical feedback during the writing of this guide.</li>
 </li>
-
