Updated dead links, removed OTR sections, few tweaks here and there

--- a/_posts/2015-01-04-data.md
+++ b/_posts/2015-01-04-data.md
@@ -41,7 +41,7 @@ Chances are you have sensitive files you wouldn’t want Thief-Asshole to see. <
 <br>
 OS X comes with software, File Vault 2, already installed on your computer that can do this hard-drive encryption for you. All you have to do is set it up according to <a href="http://support.apple.com/kb/ht4790">Apple's instructions</a>.<br>
 <br>
-Windows 8.1 will encrypt your hard-drive by default. However, if you have an earlier version of Windows, you can use the software <a href="http://windows.microsoft.com/en-us/windows7/products/features/bitlocker">Bitlocker</a>.<br>
+Windows 10 will encrypt your hard-drive by default, as detailed <a href="http://www.howtogeek.com/234826/how-to-enable-full-disk-encryption-on-windows-10/">here</a>. However, if you have an earlier version of Windows, you can use the software <a href="http://www.howtogeek.com/192894/how-to-set-up-bitlocker-encryption-on-windows/">Bitlocker</a>.<br>
 
 <br>
 <strong>Make sure to remember your encryption password!</strong> If you were to forget this, all of your computer's data would be irretrievably lost. It's also important to note that while hard drive encryption is a great deterrent for a casual thief or troll trying to physically access your computer, it would not be effective against a more sophisticated attacker (like a government tech force). If that is your concern, you'll want to manually encrypt your most important files with <a href="#pgp">PGP</a>.
