--- a/_posts/2015-01-06-chats.md
+++ b/_posts/2015-01-06-chats.md
@@ -55,7 +55,7 @@ It's very popular to use apps both within a social media site (for instance, a F
 Every social media site has different security capabilities, some more comprehensive than others. You should check out these quick privacy guides for your favorite sites and understand which tools you have at your disposal.<br>
 <br>
 <ul>
-	<li><a href="https://www.facebook.com/about/basics">Facebook</a></li>
+	<li><a href="https://www.facebook.com/about/basics/how-to-keep-your-account-secure/">Facebook</a></li>
 	<li><a href="https://support.twitter.com/groups/57-safety-security#">Twitter</a></li>
 	<li><a href="http://heresthethingblog.com/2014/01/14/7-privacy-tips-instagram-newbies/">Instagram</a></li>
 	<li><a href="https://www.tumblr.com/docs/en/account_security">Tumblr</a></li>
@@ -66,31 +66,14 @@ Every social media site has different security capabilities, some more comprehen
 <hr>
 <div id="otr">
 <p>
-	<h3 class="text-white">Use super-strong encryption for your messaging with <strong>OTR</strong></h3>
+	<h3 class="text-white">Use super-strong encryption for your messaging with <strong>Signal</strong></h3>
 </p>
 </div>
 It’s very common to use a messaging program like Facebook Chat or Google Hangouts to talk to friends: you can use the same service across devices fairly easily and always have access to your conversations. Unfortunately, these conversations are subjected to intense data mining for marketers and government agencies. And if anyone were to ever hack or leak your account, they could see years and years of private conversations because that data never goes away.
 
-Luckily, there’s a great open-source, secure, and free alternative to standard corporate chat services. <strong>OTR (which stands for Off The Record) is a protocol for encrypting instant messaging so that the content of your messages can’t be seen by anyone other than you and the person you’re talking to.</strong> It can be used with a wide variety of messaging services very easily; the only catch is that you need to use these services with an OTR-enabled chat client. The Electronic Frontier Foundation has very nifty guides for how to install a safe chat across platforms:
+Luckily, there’s a great open-source, secure, and free alternative to standard corporate chat services. <strong>Signal is an app for encrypting texts so that the content of your messages can’t be seen by anyone other than you and the person you’re talking to.</strong> It can be used for one-on-one messages, groupchats, and even phone calls.
 
-<code>OS X: Set-up <a href="https://ssd.eff.org/en/module/how-use-otr-mac">OTR with Adium</a></code><br>
-<code>Windows: Set-up <a href="https://ssd.eff.org/en/module/how-use-otr-windows">OTR with Pidgin</a></code><br>
-<code>iOS and Android: Set-up <a href="https://ssd.eff.org/en/module/how-install-and-use-chatsecure">OTR with Chatsecure</a></code>
-
-<strong>Warning</strong>: One of the shortcomings about OTR is that it only works well for one account on one device. If you try to encrypt your conversation with someone on your phone and computer for the same chat account, it’ll frequently get all fucked up. It’s because each account has a “fingerprint” that is used to identify you: changing devices changes the fingerprint, so your friend’s chat client can’t be as sure that you are the same person across both devices. For convenience’s sake, it’s often easier to have a different OTR-enabled account on each device for messaging.
-
-<hr>
-<p>
-	<h3 class="text-white">Reject corporate control of your conversations with <strong>XMPP</strong></h3>
-</p>
-So, you have a super secure chat client. How will you chat then? With so many different messaging providers (AIM, MSN, Hangouts, etc.) it can be hard to decide. Luckily, there’s a great open-source, decentralized service called <strong>XMPP</strong> that works great for privacy-minded people. Essentially, think of it like email for instant messaging. Much how you create an email address through a site like Google or Yahoo, you can create an XMPP account through an XMPP service. And just how an email address from one site can email an other, so can an XMPP account from one service message someone from another service. Unlike email, however, your messages don’t have to live forever: once they’re sent, they disappear (unless you or your XMPP server is logging them, which hopefully isn’t happening). And best of all, <strong>XMPP is well-integrated with OTR, so you can encrypt all of your conversations seamlessly.</strong>
-
-To get started, you just need to register an account at an XMPP server. Personal information should not be necessary: all you have to give is a username and password. Unfortunately, you have to trust that the XMPP server won’t track you. Even though OTR will make all of the contents of your messages secure, a server (and anyone watching) will still know your IP address and your friend’s IP address. <strong>So don’t expect to be purely anonymous when you use OTR: you’re just private.</strong>
-
-<code>You can register at any of the public, secure XMPP servers found on <a href="https://xmpp.net/directory.php">xmpp.net</a></code>
-
-<em>LET’S BE REAL FOR A SEC</em><br>
-In a perfect world, all your friends would use XMPP and we’d be all secure and happy. But realistically, you probably won’t know anyone using it, and most will still feel more comfortable using Facebook or Google or whatever. It tends to be easier to use XMPP with close friends when you talk about more personal stuff. The sensitive nature of these conversations tend to make people more willing to give XMPP a shot: you can talk casually through the normal Facebooks or whatever, but if a conversation needs to be private, you can both just jump on your chat client and go OTR via XMPP.
+<code>Check out our section on <a href="#sms">Signal</a> to get started!</code><br>
 
 <hr>
 <p>
