--- a/_posts/2015-01-01-intro.md
+++ b/_posts/2015-01-01-intro.md
@@ -30,3 +30,5 @@ Digital spaces are unique in that you often have to rely on companies and develo
 </p>
 <br>
 This guide is intended to be a comprehensive and accessible introduction to some of the most valuable cybersecurity tools available. There's <em>a lot</em> of information here, so it can get a bit overwhelming! Feel free to read each section at your own pace: there's no obligation to read through the whole guide and install every piece of tech we recommend. Consider checking out our <a href="#cheatsheet">Cheat Sheet</a> section as a quick way to get started with the tools that best meet your digital security needs. Don't worry if some of the tech is a bit confusing: even experienced techies can get a bit disoriented at first, but rarely do you need to know every inner-working of a tool in order to take advantage of it. If at any point you have questions or concerns, feel free to tweet this guide's creator at <a href="https://twitter.com/ciakraa">@ciakraa</a> or email at <a href="mailto:noah@hackblossom.org">noah@hackblossom.org</a> and he will try to help as quickly as he can!
+
+We also have a Spanish version of this guide, <a href="https://es.hackblossom.org/cybersecurity/">Guía de Seguridad Digital para Feministas Autogestivas</a>. Check it out!
