Added section on mobile browsing, added licenses, added rec to update software, removed orbot, maybe some other fixes here and there idk it's all good, trust

--- a/_posts/2015-01-05-phones.md
+++ b/_posts/2015-01-05-phones.md
@@ -66,11 +66,7 @@ The Electronic Frontier Foundation offers guides for using <a href="https://ssd.
 	<h3 class="text-white">Protect your <strong>smartphone browsing</strong></h3>
 </p>
 </div>
-Unfortunately, the nature of smartphone browsers is such that you don’t have as many security extension options like you do on a computer. On Android you can download the mobile Firefox browser and use all of our suggested extensions, but otherwise the browsers on iOS and Android do not offer this level of control :(
-
-If you’re an android user, you can install an app called <strong>Orbot</strong> that can push your phone’s internet traffic through to Tor network, giving you fantastic anonymity. You can configure certain apps, like twitter, to use the Tor network, or can just force all your traffic through Tor! You can also install a web browser called <strong>Orweb</strong> to browse the internet anonymously like you were using the Tor Browser. Just remember that Tor can't stop an app from leaking identifying information, so don't assume you're totally anonymous when on your phone. Unfortunately these apps are only available on Android, through the Play Store.<br>
-<br>
-<code>The Guardian Project offers a <a href="https://guardianproject.info/howto/browsefreely/">useful guide</a> for setting-up Orbot on Android.</code>
+You're in luck! You have a wonderful set of easy and effective options for securing the web activity on your phone. Just check out our <a href="#mobilebrowsing">mobile browsing</a> section and download either <a href="#firefoxfocus">Firefox Focus</a> for iOS or <a href="#firefoxandroid">Firefox for Android</a>.
 
 Earlier in the guide, we talked about securing your <a href="#vpn">web browsing with a VPN</a>. Fortunately, you can use a VPN on your phone as well! If you already have a VPN provider, it’s relatively easy to set-up on your phone. Follow Apple’s instructions for iOS or check out OpenVPN (our recommended VPN client for Android).<br>
 <br>
