--- a/_posts/2015-01-06-chats.md
+++ b/_posts/2015-01-06-chats.md
@@ -58,6 +58,7 @@ Every social media site has different security capabilities, some more comprehen
 	<li><a href="https://www.facebook.com/about/basics/how-to-keep-your-account-secure/">Facebook</a></li>
 	<li><a href="https://support.twitter.com/groups/57-safety-security#">Twitter</a></li>
 	<li><a href="http://heresthethingblog.com/2014/01/14/7-privacy-tips-instagram-newbies/">Instagram</a></li>
+    <li><a href="https://support.snapchat.com/en-US/a/privacy-settings">Snapchat</a></li>
 	<li><a href="https://www.tumblr.com/docs/en/account_security">Tumblr</a></li>
 	<li><a href="https://help.linkedin.com/app/answers/detail/a_id/267/~/account-security-and-privacy---best-practices">LinkedIn</a></li>
 </ul>
